<resources>
    <string name="app_name">ShoeStore</string>
    <string name="shoe_store_logo">Shoe Store Logo</string>
    <string name="shoe_store_title">Styles Shoe Store</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login_or_register">Login / Register</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_username">Welcome %s!</string>
    <string name="welcome_text">Welcome to the Shoe Store Inventory.\n\nNow you can manage the inventory more easily!</string>
    <string name="get_started_button">Get Started</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_text"><![CDATA[
        <ul>
            <li>See the current list of shoes</li>
            <li>Click on the <strong>plus</strong> button to add a new shoe</li>
            <li>Click on a shoe tile to open a details view</li>
            <li>Deleting an entry can be done in the details view</li>
        </ul>
    ]]></string>
    <string name="add_item">Add Item</string>
    <string name="shoe_image">Shoe image</string>
    <string name="shoe_title">Shoe Title</string>
    <string name="shoe_company">Shoe Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit_item">Edit Item</string>
    <string name="dialog_header">Dialog Header</string>
    <string name="logout">Logout</string>
</resources>
