<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        app:cardElevation="16dp"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:background="#DEDEDE"
                android:contentDescription="@string/shoe_image"
                android:scaleType="center"
                android:src="@drawable/ic_image_placeholder"
                app:layout_constraintBottom_toTopOf="@id/shoe_title"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/shoe_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#4D000000"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@{Double.toString(shoe.size)}"
                tools:text="8" />

            <TextView
                android:id="@+id/shoe_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@{shoe.name}"
                tools:text="@string/shoe_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/shoe_company"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/shoe_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:ellipsize="end"
                android:gravity="end"
                android:maxLines="1"
                android:text="@{shoe.company}"
                tools:text="@string/shoe_company"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/shoe_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>